--- a/pom.xml
+++ b/pom.xml
@@ -92,13 +92,13 @@
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
-      <version>3.2.8</version>
+      <version>3.4.1</version>
     </dependency>
     <!-- 添加mybatis与Spring整合的核心包 -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
-      <version>1.2.2</version>
+      <version>1.3.0</version>
     </dependency>
     <!-- 添加servlet3.0核心包 -->
     <dependency>
@@ -127,7 +127,7 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>druid</artifactId>
-      <version>1.0.12</version>
+      <version>1.1.10</version>
     </dependency>
     <!-- log4j依赖配置 -->
     <dependency>
@@ -165,6 +165,12 @@
           <version>RELEASE</version>
           <scope>test</scope>
       </dependency>
+    <!--添加dom4j解析jar-->
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
   </dependencies>
 
   <build>
