修改bug，进行优化

--- a/src/main/resources/config/fileURL.properties
+++ b/src/main/resources/config/fileURL.properties
@@ -1,2 +1,7 @@
-sndURL=D:\\snd
-rptURL=D:\\rpt
+sndURL=C:\\Users\\admin\\Desktop\\snd
+rptURL=C:\\Users\\admin\\Desktop\\rpt
+destURL=C:\\Users\\admin\\Desktop\\dest
+errorURL=C:\\Users\\admin\\Desktop\\error
+w=D:\\dest_snd
+s=D:\\rpt
+x=D:\\snd
